code/Ben/k8s/test/account-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: account-svc
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: account-svc
        version: v16
    spec:
      containers:
        - name: account-svc
          #镜像地址
          image: account服务镜像地址
          imagePullPolicy: Always
          ports:
            - name: 8080tcp02
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 128Mi
          envFrom:
            - configMapRef:
                name: account-conifg
                optional: false
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: account-svc
  namespace: dev
spec:
  selector:
    app: account-svc
    version: v16
  ports:
    - protocol: TCP
      name: 8080tcp2
      port: 8080
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
