code/Ben/k8s/test/gateway.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gateway
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gateway
        version: v16
    spec:
      containers:
        - name: gateway
          #镜像地址
          image: gateway 镜像地址
          imagePullPolicy: Always
          ports:
            - name: 8080tcp02
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 128Mi
        - env:
            - name: JAVA_OPTS
              value: -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=512m -Xms512m -Xmx1024m
                -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC
          envFrom:
            - configMapRef:
                name: gateway-config
                optional: false
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: dev
spec:
  selector:
    app: gateway
    version: v16
  ports:
    - protocol: TCP
      name: 8080tcp2
      port: 8080
      targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
