code/Ben/k8s/test/mail-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mail-svc
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mail-svc
        version: v16
    spec:
      containers:
        - name: mail-svc
          #镜像地址
          image: mail服务 镜像地址
          imagePullPolicy: Always
          ports:
            - name: 3001tcp2
              containerPort: 3001
              protocol: TCP
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: mail-svc
  namespace: dev
spec:
  selector:
    app: mail-svc
    version: v16
  ports:
    - protocol: TCP
      name: 3000tcp2
      port: 3001
      targetPort: 3001
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
