code/Ben/k8s/test/www-svc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: www-svc
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: www-svc
        version: v16
    spec:
      containers:
        - name: www-svc
          #镜像地址
          image: www服务 镜像地址
          imagePullPolicy: Always
          ports:
            - name: 3000tcp2
              containerPort: 3000
              protocol: TCP
      dnsPolicy: ClusterFirst
---
apiVersion: v1
kind: Service
metadata:
  name: www-svc
  namespace: dev
spec:
  selector:
    app: www-svc
    version: v16
  ports:
    - protocol: TCP
      name: 3000tcp2
      port: 3000
      targetPort: 3000
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
